# EvilCG

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  win_build.bat
EvilCG/: CMakeLists.txt
EvilCG/inc/: api_define.h  ecg_api.h  ecg_cl.h  ecg_global.h  ecg_mesh_t.h  ecg_status.h
EvilCG/inc/cl/: ecg_host_ctrl.h  ecg_internal.h  ecg_program.h  ecg_subprograms.h
EvilCG/inc/core/: ecg_cl_programs.h  ecg_cl_version.h  ecg_host_ctrl.h  ecg_internal.h  ecg_program.h  ecg_simplification.h  ecg_subprograms.h
EvilCG/inc/help/: ecg_allocate.h  ecg_checks.h  ecg_geom.h  ecg_handler.h  ecg_hasher.h  ecg_helper.h  ecg_logger.h  ecg_math.h  ecg_mem.h  ecg_memory.h  ecg_overloads.h  ecg_status.h
EvilCG/src/: ecg_api.cpp  ecg_cl.cpp  ecg_compute.cpp  ecg_core.cpp  ecg_debug.cpp  ecg_lod.cpp  main_ecg.cpp
EvilCG/src/cl/: ecg_host_ctrl.cpp  ecg_program.cpp
EvilCG/src/core/: ecg_host_ctrl.cpp  ecg_program.cpp  ecg_simplification.cpp
EvilCG/src/help/: ecg_allocate.cpp  ecg_checks.cpp  ecg_geom.cpp  ecg_handler.cpp  ecg_hasher.cpp  ecg_helper.cpp  ecg_logger.cpp  ecg_math.cpp  ecg_mem.cpp  ecg_memory.cpp  ecg_overloads.cpp  ecg_status.cpp
EvilCG/src/impl/: ecg_api_convert.cpp  ecg_api_export.cpp  ecg_api_hulls.cpp  ecg_api_import.cpp  ecg_api_intersections.cpp  ecg_api_simplification.cpp
Examples/Hulls/: CMakeLists.txt  main.cpp  others.h
Tests/: CMakeLists.txt
Tests/inc/: ecg_meshes.h  ecg_timer.h  timer.h
Tests/src/: ecg_api_test.cpp  ecg_cl_test.cpp  ecg_compute_test.cpp  ecg_core_test.cpp  ecg_debug_test.cpp  ecg_main.cpp  ecg_meshes.cpp  ecg_test.cpp  ecg_timer.cpp  test_ecg.cpp
